# wow_profession_leveler

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/wow_profession_leveler/: app.py
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte
scripts/: connected_realms.py  curl_backend.sh
scripts/items/: generate_items_classes.py  item_classes.json  item_classes_raw.txt
